@@ -114,6 +114,7 @@ All validation rules have been updated to comply with the SysMLv2 2025-04 specif
 === Improvements
 
 - https://github.com/eclipse-syson/syson/issues/1384[#1384] [metamodel] Align metamodel to SysMLv2 2025-04 specification released on April 2025(see https://www.omg.org/spec/SysML/ for more details) and KerML 2025-04 specification released on April 2024(see https://www.omg.org/spec/KerML/ for more details).
+- https://github.com/eclipse-syson/syson/issues/1448[#1448] [syson] Exclude referenced libraries from validation
 
 === New features
 
